--- a/.gitignore
+++ b/.gitignore
@@ -169,7 +169,7 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
@@ -265,3 +265,4 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django
 .DS_Store
+.idea/inspectionProfiles/Project_Default.xml
