added some tests #6

--- a/.gitignore
+++ b/.gitignore
@@ -266,3 +266,4 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/python,django
 .DS_Store
 .idea/inspectionProfiles/Project_Default.xml
+.vscode
