--- a/config_acceptanceTests2StoresNoWorkers.json
+++ b/config_acceptanceTests2StoresNoWorkers.json
@@ -1,4 +1,12 @@
 [{
+  "PaymentService": "https://php-server-try.000webhostapp.com/",
+  "SupplyService": "https://php-server-try.000webhostapp.com/",
+  "Database": "",
+  "Admins": {
+    "admin": "12341234",
+    "admin2": "12341234"
+  }
+},{
   "register": {"args": ["Feliks", "password333", "feliks@gmail.com"]}
 },{
   "register": {"args": ["Amiel", "password111", "amiel@gmail.com"]}
