--- a/default_config.json
+++ b/default_config.json
@@ -1,6 +1,6 @@
 {
-  "PaymentService": "https://php-server-try.000webhostapp.com/",
-  "SupplyService": "https://php-server-try.000webhostapp.com/",
+  "PaymentService": "https://external-systems.000webhostapp.com/",
+  "SupplyService": "https://external-systems.000webhostapp.com/",
   "Database": "",
   "Admins": {
     "admin": "12341234",
